--- a/style.css
+++ b/style.css
@@ -13,3 +13,37 @@ body{
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
 }
+
+.cartao_conteudo{
+    text-align: center;
+    background-color: crimson;
+    height: 100%;    ;
+}
+
+.cartao_conteudo h3 {
+    background-color: black;
+    text-align: left;
+    position: absolute;
+    margin: 0.6rem;
+    font-size: 1vw;
+}
+
+.cartao_conteudo p{
+    margin-top: 1rem;
+    padding: 2rem;
+}
+
+footer{
+    background-color: deepskyblue;
+    color: blueviolet;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 2rem;
+}
+
+footer p{
+    text-align: center;
+    font-size: 0.6rem;
+    margin-top: 0.5rem;
+}
